# xiaozhi-desktop-mcp

./: .env.example  .gitignore  AGENT.md  CHANGELOG.md  LICENSE  README.md  desktop-mcp.yaml  hello.html  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  clients.md  desktop-control-roadmap.md  migration-v3.md  operations.md  security.md  xiaozhi-integration.md
examples/: mcp_config.json
scripts/: mac_smoke.py
src/xiaozhi_desktop_mcp/: __init__.py  action_registry.py  api_v1.py  api_v2.py  config.py  http_server.py  macos_accessibility.js  macos_ocr.swift  responses.py  safety.py  server.py  storage.py  validation.py  workflows_v2.py
src/xiaozhi_desktop_mcp/tools/: accessibility.py  apps.py  browser.py  browser_drivers.py  catalog.py  cc_session.py  cc_task.py  clipboard.py  desktop_config.py  diagnostics.py  finder.py  intent.py  music.py  music_drivers.py  obsidian.py  pending_actions.py  perception.py  projects.py  workflows.py  xcode.py
tests/: conftest.py  test_action_registry.py  test_api_v2.py  test_app_browser_music.py  test_cc_session_safety.py  test_config_aliases.py  test_desktop_intent.py  test_desktop_perception.py  test_http_api.py  test_obsidian_safety.py  test_pending_actions.py  test_projects_safety.py  test_streamable_http.py  test_workflows_v2.py  test_xcode.py
