[project]
name = "xiaozhi-desktop-mcp"
version = "1.0.0"
description = "Personal desktop workflow MCP tools for Xiaozhi: Obsidian memory, app launch, and safe local automation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "jijiutong" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.8.1",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "pexpect>=4.9.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/jijiutong/xiaozhi-desktop-mcp"
Repository = "https://github.com/jijiutong/xiaozhi-desktop-mcp"
Issues = "https://github.com/jijiutong/xiaozhi-desktop-mcp/issues"

[project.scripts]
xiaozhi-desktop-mcp = "xiaozhi_desktop_mcp.server:main"
xiaozhi-desktop-mcp-streamable = "xiaozhi_desktop_mcp.server:main_streamable_http"
xiaozhi-desktop-http = "xiaozhi_desktop_mcp.http_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
combine-as-imports = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
